[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Galaxy.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sprites/background_computer/fondo_c.png" type="Texture" id=3]
[ext_resource path="res://scenes/FondoPecera.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Pantalla.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Computadores.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Personaje.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/Personaje.gd" type="Script" id=8]
[ext_resource path="res://assets/sprites/esencias/empty.png" type="Texture" id=9]
[ext_resource path="res://scripts/Esencia.gd" type="Script" id=10]
[ext_resource path="res://scenes/AudioPlayer.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/sprites/background_computer/fondo_b.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/background_computer/fondo_a.png" type="Texture" id=13]
[ext_resource path="res://assets/music/todo_12layer_r3.ogg" type="AudioStream" id=14]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Galaxy" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.75, 0.75 )
z_index = -10

[node name="FondoPecera" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -2.65002 )
scale = Vector2( 0.5, 0.5 )
z_index = -6

[node name="FondoPantalla" type="Node" parent="."]

[node name="FondoA" type="Sprite" parent="FondoPantalla"]
position = Vector2( 116.105, 187.023 )
scale = Vector2( 0.457032, 0.457032 )
z_index = -5
texture = ExtResource( 13 )

[node name="FondoB" type="Sprite" parent="FondoPantalla"]
position = Vector2( 277.154, 157.363 )
scale = Vector2( 0.505925, 0.495811 )
z_index = -5
texture = ExtResource( 12 )

[node name="FondoC" type="Sprite" parent="FondoPantalla"]
position = Vector2( 428.143, 196.95 )
scale = Vector2( 0.449714, 0.471837 )
z_index = -5
texture = ExtResource( 3 )

[node name="Pantalla1" parent="." instance=ExtResource( 5 )]
position = Vector2( 120.33, 193.504 )

[node name="Pantalla2" parent="." instance=ExtResource( 5 )]
position = Vector2( 275.661, 172.298 )
id = 1

[node name="Pantalla3" parent="." instance=ExtResource( 5 )]
position = Vector2( 416.842, 193.362 )
id = 2

[node name="Computadores" parent="." instance=ExtResource( 6 )]
scale = Vector2( 0.5, 0.5 )
z_index = -2

[node name="Personaje" parent="." instance=ExtResource( 7 )]
position = Vector2( 221.957, 354.667 )
script = ExtResource( 8 )

[node name="Positions" type="Node" parent="."]

[node name="PosicionPantalla1" type="Position2D" parent="Positions"]
position = Vector2( 187.661, 357.534 )

[node name="PosicionPantalla2" type="Position2D" parent="Positions"]
position = Vector2( 220.805, 351.894 )

[node name="PosicionPantalla3" type="Position2D" parent="Positions"]
position = Vector2( 329.207, 349.197 )

[node name="Esencia" type="Sprite" parent="."]
position = Vector2( 51.1487, 484.455 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="AudioPlayer" parent="." instance=ExtResource( 11 )]

[node name="Timer" type="Timer" parent="."]

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -8.0
